--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,7 @@ script:
   - haxelib install hxjava
   - haxelib install hxnodejs
   - haxelib install format
+  - haxelib install thx.semver
   - haxelib git om.core https://github.com/tong/om.core
   - haxe doc.hxml
+  #- haxe --cwd test build.hxml
