--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@ _*
 *.[0-9].*
 _depricated/
 doc/
-examples/_*
-examples/*/*.jar
-examples/*/*.js*
-examples/*/*.n
-examples/*/*.py
-examples/*/java
+example/_*
+example/*/*.hl
+example/*/*.jar
+example/*/*.js*
+example/*/*.n
+example/*/*.py
+example/*/java
 test/bin/
 haxedoc.xml
