--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ install:
   - haxelib install hxcs
   - haxelib install hxjava
   - haxelib install hxnodejs
-  - haxelib git om.test https://github.com/omlib/om.test.git
-  - haxelib git utest https://github.com/tong/utest.git
+  - haxelib install utest
+  #- haxelib git utest https://github.com/tong/utest.git
   - haxelib dev om.core .
 
 script:
