--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,20 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: krdlab/setup-haxe@v1
+        with:
+          haxe-version: 4.2.1
       - name: Setup haxe
         run: |
-          sudo add-apt-repository ppa:haxe/releases -y
-          sudo apt-get update
-          sudo apt-get install haxe -y
-          mkdir ~/haxelib && haxelib setup ~/haxelib
           haxelib dev om.core .
           haxelib install hxcpp
-          haxelib install hxcs
-          haxelib install hxjava
           haxelib install hxnodejs
           haxelib install format
           haxelib install utest
-      - name: Run unit tests
+      - name: Build unit tests
         run: haxe test.hxml
       - name: Build haxedocs
         run: haxe doc.hxml
