--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: krdlab/setup-haxe@v1
+      - uses: actions/checkout@v3
+      - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.2.2
+          haxe-version: 4.2.5
       - name: Setup haxe
         run: |
           haxelib dev om.core .
