--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,8 @@
-name: CI
+name: test
 
 on:
   push:
-    branches: [master]
   pull_request:
-    branches: [master]
 
 jobs:
   build:
@@ -13,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.2.5
+          haxe-version: 4.3.1
       - name: Setup haxe
         run: |
           haxelib dev om.core .
