--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,11 +7,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        haxe:
+        - 4.3.1
+        - latest
     steps:
       - uses: actions/checkout@v3
-      - uses: krdlab/setup-haxe@master
+      - name: Install haxe ${{ matrix.haxe }}
+        uses: krdlab/setup-haxe@master
         with:
-          haxe-version: 4.3.1
+          haxe-version: ${{ matrix.haxe }}
       - name: Setup haxe
         run: |
           haxelib dev om.core .
